<resources>
    <string name="app_name">Sensors&amp;Ai</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="title_slide1">All about Sensor</string>
    <string name="desc_slide1">It will tell you almost everything about Sensors</string>
    <string name="title_slide2">A.I basics </string>
    <string name="desc_slide2">It will tell you about some AI basic,library and api </string>
    <string name="title_slide3">Amazing Tools </string>
    <string name="desc_slide3">it contains many amazing tools</string>
    <string name="sensors_and_ai_is_an_android_application_which_will_give_you_the_complete_information_about_all_the_sensors_and_some_basic_information_about_artificial_intelligence_this_application_will_tell_you_about_the_use_and_implementation_of_the_sensors_and_artificial_intelligence_this_app_will_show_you_how_sensors_and_artificial_intelligence_is_used_in_any_android_projects_it_will_also_give_you_all_the_updates_related_to_sensor_and_artificial_intelligence">Sensors And Ai is an android application which will give you the complete information about all the sensors and some basic information about artificial intelligence.This application will tell you about the use and implementation of the sensors and artificial intelligence.This app will show you how sensors and artificial intelligence is used in any android projects. It will also give you all the updates related to sensor and artificial intelligence</string>
    <string name="by_najmus_seemab">BY:-NAJMUS SEEMAB</string>

    <string name="madhura_p_divakara">Madhura P Divakara</string>

    <string name="click_on_the_above_icon_and_speak">Click on the above icon and speak</string>
    <string name="magetic_sensor">Magetic Sensor</string>
    <string name="o">o</string>
    <string name="it_will_detect_hard_iron_and_electromagnetic_waves">it will detect hard iron and electromagnetic waves</string>

    <string name="proximity_sensor_value_in_cm">Proximity Sensor value in cm</string>
    <string name="this_sensor_capture_the_distance_to_an_object_relative_to_screen_in_cm_this_sensor_is_close_to_the_speaker_of_phone_so_that_the_screen_get_turned_off_during_a_phone_call_when_the_phone_is_near_to_ear">This sensor capture the distance to an object relative to screen in cm. This sensor is close to the speaker of phone so that the screen get turned off,during a phone call when the phone is near to ear.</string>
    <string name="todo">TODO</string>
    <string name="IMAGE">TODO</string>
    <string name="ai_in_ocr">AI in OCR</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="games">Games</string>
    <string name="todo4">TODO</string>
    <string name="api_and_library_s_of_a_i">api and library\'s of a.i</string>
    <string name="todo4">TODO</string>
    <string name="what_is_a_i">what is a.i</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="face_detector">Face detector</string>
    <string name="chat_bot">CHAT BOT</string>
    <string name="thermal_sensor">THERMAL SENSOR</string>
    <string name="magnetic_sensor">MAGNETIC SENSOR</string>
    <string name="sensors_u_have">SENSORS U HAVE</string>
    <string name="todo9">TODO</string>
    <string name="todo11">TODO</string>
    <string name="gravity_sensor">GRAVITY SENSOR</string>
    <string name="light_sensor">LIGHT SENSOR</string>
    <string name="proximity_sensor">PROXIMITY SENSOR</string>
    <string name="sensor_visualization">Sensor Visualization</string>
    <string name="special_sensor">SPECIAL SENSOR</string>
    <string name="todo12">TODO</string>
    <string name="todo13">TODO</string>
    <string name="todo14">TODO</string>
    <string name="todo15">TODO</string>
    <string name="todo16">TODO</string>
    <string name="todo17">TODO</string>
    <string name="play">PLAY</string>
    <string name="rules">Rules</string>
    <string name="todo18">TODO</string>
    <string name="gravity">Gravity</string>
    <string name="x">x=</string>
    <string name="y">Y=</string>
    <string name="todo19">TODO</string>
    <string name="this_sensor_measure_the_gravity_force_on_the_device_in_m_s_s">This Sensor measure the gravity force on the device in m/s*s</string>
    <string name="z">Z=</string>
    <string name="the_ambident_light_level_in_the_si_unit_lux_the_sensor_measure_the_light_intensity_which_incident_on_the_unit_and_controls_the_display_brightness_if_set">The ambident light level in the SI unit*Lux. The sensor measure the light intensity which incident on the unit and controls the display brightness(if set)</string>
    <string name="ambidental_light_intensity_in_lux">Ambidental light intensity in lux:</string>
    <string name="todo21">TODO</string>
    <string name="light_intensity">Light intensity</string>
    <string name="let_s_see_who_wins">Let\'s see who wins.</string>
    <string name="good_luck">good luck!</string>
    <string name="scissors">SCISSORS</string>
    <string name="paper">PAPER</string>
    <string name="rock">ROCK</string>
    <string name="your_score_0_a_i_score_0">Your Score: 0 A.I Score: 0</string>
    <string name="a_i_choice">A.I CHOICE</string>
    <string name="your_choice">YOUR CHOICE</string>
    <string name="todo22">TODO</string>
    <string name="todo23">TODO</string>
    <string name="todo23">TODO</string>
    <string name="todo25">TODO</string>
    <string name="rock_paper_scissors_is_a_zero_sum_hand_game_usually_played_between_two_people_in_which_each_player_simultaneously_forms_one_of_three_shapes_with_an_outstretched_hand_these_shapes_are_rock_a_simple_fist_paper_a_flat_hand_and_scissors_a_fist_with_the_index_and_middle_fingers_together_forming_a_v_the_game_has_only_three_possible_outcomes_other_than_a_tie_a_player_who_decides_to_play_rock_will_beat_another_player_who_has_chosen_scissors_rock_crushes_scissors_but_will_lose_to_one_who_has_played_paper_paper_covers_rock_a_play_of_paper_will_lose_to_a_play_of_scissors_scissors_cut_paper_if_both_players_choose_the_same_shape_the_game_is_tied_and_is_usually_immediately_replayed_to_break_the_tie">Rock–paper–scissors is a zero-sum hand game usually played between two people, in which each player simultaneously forms one of three shapes with an outstretched hand. These shapes are ROCK (✊ a simple fist), PAPER (✋ a flat hand), and SCISSORS (✌️ a fist with the index and middle fingers together forming a V). The game has only three possible outcomes other than a tie: a player who decides to play rock will beat another player who has chosen scissors (rock crushes scissors) but will lose to one who has played paper (paper covers rock); a play of paper will lose to a play of scissors (scissors cut paper). If both players choose the same shape, the game is tied and is usually immediately replayed to break the tie.</string>
    <string name="thermal_sensor">THERMAL SENSOR</string>
    <string name="magnetic_sensor">MAGNETIC SENSOR</string>
    <string name="light_sensor">LIGHT SENSOR</string>
    <string name="proximity_sensor">PROXIMITY SENSOR</string>
    <string name="todo26">TODO</string>
    <string name="facing">Facing</string>
    <string name="todo28">TODO</string>
    <string name="basic_gesture">Basic Gesture</string>
    <string name="todo29">TODO</string>
    <string name="significant_motion30">Significant motion</string>
    <string name="step_counter">STEP COUNTER</string>
    <string name="todo31">TODO</string>
    <string name="a_sensor_of_this_type_returns_the_number_of_steps_taken_by_the_user_since_the_last_reboot_while_activated_activity_value_is_reset_to_zeroonly_on_a_system_reboot">A Sensor of this type returns the number of steps taken by the user since the last reboot while activated.activity value is reset to zeroonly on a system reboot</string>
    <string name="_0">0</string>
    <string name="steps">Steps</string>
    <string name="todo35">TODO</string>
    <string name="step_counter2">Step counter</string>
    <string name="check_your_sensors">CHECK YOUR SENSORS</string>
    <string name="artificial_intelligence">ARTIFICIAL INTELLIGENCE</string>
    <string name="sensor_updates">SENSOR UPDATES</string>
    <string name="tools">TOOLS</string>
    <string name="todo">TODO</string>
    <string name="todo37">TODO</string>
    <string name="ai_updates">AI UPDATES</string>
    <string name="TODO3">TODO</string>
    <string name="todo37">TODO</string>
    <string name="todo38">TODO</string>
    <string name="todo39">TODO</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="todo39">TODO</string>
    <string name="todo41">TODO</string>

</resources>
