<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.najmus.sensorsai.StepCounter">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_counter2"
            android:gravity="center"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/stepcou"
            android:contentDescription="@string/todo35" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steps"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:id="@+id/tv_info"
            android:textStyle="bold"
            android:background="#f9c7bdbd"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/_0"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:id="@+id/tv_steps"
            android:textStyle="bold"
            android:background="#f7b4eac3"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:text="@string/a_sensor_of_this_type_returns_the_number_of_steps_taken_by_the_user_since_the_last_reboot_while_activated_activity_value_is_reset_to_zeroonly_on_a_system_reboot"
            android:textStyle="bold"/>



    </LinearLayout>



</ScrollView>
