<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    tools:context="com.example.najmus.sensorsai.LightSensor"

    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">


       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/light_intensity"
           android:textStyle="bold"
           android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/download2"
            android:contentDescription="@string/todo21" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ambidental_light_intensity_in_lux"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:background="#cab1a4a4"
            android:textStyle="bold"
           android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:text="@string/the_ambident_light_level_in_the_si_unit_lux_the_sensor_measure_the_light_intensity_which_incident_on_the_unit_and_controls_the_display_brightness_if_set"/>



    </LinearLayout>

</ScrollView>
