<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.najmus.sensorsai.HomeActivity"
    tools:showIn="@layout/app_bar_home"
    android:background="#BBDEFB"
    android:padding="5dp">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:padding="5dp">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/mainbg"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="110dp"
        app:srcCompat="@drawable/cys"
        android:contentDescription="@string/TODO3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageView4"
        android:layout_marginRight="20dp"
        android:layout_toEndOf="@+id/imageView4"
        android:layout_toRightOf="@+id/imageView4"
        android:background="@drawable/buttonim"
        android:onClick="CheckButtonClicked"
        android:text="@string/check_your_sensors"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="#121213"
        android:textStyle="bold"
        android:layout_marginEnd="20dp" />

    <Button
        android:id="@+id/button5"
        android:layout_marginRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button4"
        android:layout_toEndOf="@+id/imageView4"
        android:layout_toRightOf="@+id/imageView4"
        android:background="@drawable/buttonur"
        android:layout_marginTop="5dp"
        android:text="@string/artificial_intelligence"
        android:onClick="AiButtonClicked"
        android:textStyle="bold"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="#121213"
        android:layout_marginEnd="20dp" />
    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView4"
        app:srcCompat="@drawable/ai"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/todo38" />

    <Button
        android:id="@+id/button6"
        android:textStyle="bold"
        android:layout_marginRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:layout_centerVertical="true"
        android:background="@drawable/buttonim"
        android:text="@string/tools"
        android:onClick="ToolsButtonClicked"
        android:layout_marginTop="5dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="#121213"
        android:layout_marginEnd="20dp" />


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView5"
        app:srcCompat="@drawable/tools"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/todo39" />
    <Button
        android:id="@+id/button7"
        android:textStyle="bold"
        android:layout_marginRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:layout_centerVertical="true"
        android:background="@drawable/buttonur"
        android:text="@string/sensor_updates"
        android:onClick="SensorUpdateButtonClicked"
        android:layout_marginTop="5dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="#121213"
        android:layout_marginEnd="20dp" />


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView6"
        app:srcCompat="@drawable/upda"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/todo37" />
        <Button
            android:id="@+id/button8"
            android:textStyle="bold"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignLeft="@+id/button6"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/button7"
            android:layout_alignStart="@+id/button6"
            android:layout_centerVertical="true"
            android:background="@drawable/buttonim"
            android:text="@string/ai_updates"
            android:onClick="AiUpdatesClicked"
            android:layout_marginTop="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#121213"
            android:layout_marginEnd="20dp" />


        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView7"
            app:srcCompat="@drawable/upda"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/todo37" />



</RelativeLayout>


    </ScrollView>
