<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SensorVisual">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

       >
    <Button
        android:id="@+id/buttonProxi"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/buttonur"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:onClick="ProxGraButtonClicked"
        android:text="@string/proximity_sensor"
        android:textStyle="bold"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"

        />

    <Button
        android:id="@+id/buttonLight"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/buttonim"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/light_sensor"
        android:textStyle="bold"
        android:onClick="LightSensorGclicked"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"

        />
    <Button
        android:id="@+id/buttonMag"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/buttonur"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/magnetic_sensor"
        android:textStyle="bold"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"

        />
    <Button
        android:id="@+id/buttonThermal"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/buttonim"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/thermal_sensor"
        android:textStyle="bold"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"

        />
    </LinearLayout>

</ScrollView>